# pulse

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: api.rs  db.rs  main.rs  models.rs
backend/src/tests/: mod.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: api.rs  app.rs  config.rs  main.rs
desktop/src/ui/: chat.rs  login.rs  settings.rs
docs/: ARCHITECTURE.md
mobile/: Cargo.toml
mobile/src/: lib.rs  storage.rs
