[workspace]
members = [
    "backend",
    "mobile",
    "desktop",
    "crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pulse Team"]
license = "AGPL-3.0"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
quinn = "0.10"
rustls = "0.21"
aes-gcm = "0.10"
x25519-dalek = "2.0"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3" 