[package]
name = "pulse-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true 